k8s/commitment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commitment-service
  namespace: commitly
  labels:
    app: commitment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commitment-service
  template:
    metadata:
      labels:
        app: commitment-service
    spec:
      containers:
        - name: commitment-service
          image: harsimrand/commitly-commitment-service:v0-3
          ports:
            - containerPort: 8080
