k8s/email-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  namespace: commitly
  labels:
    app: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
        - name: email-service
          image: harsimrand/commitly-email-service:v0-1
