k8s/reminder-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reminder-service
  namespace: commitly
  labels:
    app: reminder-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reminder-service
  template:
    metadata:
      labels:
        app: reminder-service
    spec:
      containers:
        - name: reminder-service
          image: harsimrand/commitly-reminder-service:v0-2
          ports:
            - containerPort: 9000
