k8s/commitment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commitment-service
  namespace: commitly
spec:
  selector:
    app: commitment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
