k8s/internal-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-proxy
  namespace: commitly
spec:
  selector:
    app: internal-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
