k8s/next-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-app-service
  namespace: commitly
spec:
  type: ClusterIP
  selector:
    app: next-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
