k8s/reminder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reminder-service
  namespace: commitly
spec:
  selector:
    app: reminder-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
